Second commit, reporting early steps.

--- a/h3.md
+++ b/h3.md
@@ -3,3 +3,7 @@
 ## Making custom Arch Linux -live usb-stick
 
 Github page for the project is up!
+
+First, commit editor defaulted to vim, so changed that:
+	export GIT_EDITOR=nano
+
