--- a/h3.md
+++ b/h3.md
@@ -4,7 +4,8 @@
 
 Github page for the project is up!
 
-First, commit editor defaulted to vim, so changed that:
-
+First, commit editor defaulted to vim, so following line was added
+to user/.bash_profile
 	export GIT_EDITOR=nano
+
 
