--- a/h3.md
+++ b/h3.md
@@ -1,4 +1,4 @@
-# Git exercises
+# Git exercise journal
 
 ## Making custom Arch Linux -live usb-stick
 
@@ -6,6 +6,12 @@ Github page for the project is up!
 
 First, commit editor defaulted to vim, so following line was added
 to user/.bash_profile
+
 	export GIT_EDITOR=nano
 
+I'm looking at the guide on Arch Wiki to do this.
+https://wiki.archlinux.org/index.php/Archiso
+
+My goal is to have a live Arch Linux stick with ready configurations for
+Saltstack and networking.
 
