Added archiso files

--- a/h3.md
+++ b/h3.md
@@ -4,14 +4,24 @@
 
 Github page for the project is up!
 
-First, commit editor defaulted to vim, so following line was added
+First commit editor defaulted to vim, so following line was added
 to user/.bash_profile
 
 	export GIT_EDITOR=nano
 
-I'm looking at the guide on Arch Wiki to do this.
+I'm looking at the guide on Arch Wiki to do this:
+
 https://wiki.archlinux.org/index.php/Archiso
 
 My goal is to have a live Arch Linux stick with ready configurations for
 Saltstack and networking.
+
+Setting up the files and committing:
+
+	# pacman -S archiso
+	# cp -r /usr/share/archiso/configs/releng/ ~/archlive
+
+## c) Git commands
+
+	# git log
 
