Git log pasted, learning markdown tests

--- a/h3.md
+++ b/h3.md
@@ -13,8 +13,8 @@ I'm looking at the guide on Arch Wiki to do this:
 
 https://wiki.archlinux.org/index.php/Archiso
 
-My goal is to have a live Arch Linux stick with ready configurations for
-Saltstack and networking.
+My goal is to have a live Arch Linux bootable iso image on a usb
+stick with ready configurations for Saltstack and networking.
 
 Setting up the files and committing:
 
@@ -25,3 +25,44 @@ Setting up the files and committing:
 
 	# git log
 
+commit c83a1b76d824e1a247ed0527f449d37a8c433710 (HEAD -> master, origin/master, origin/HEAD)
+Author: tqre <tkuure@gmail.com>
+Date:   Mon Apr 15 20:09:10 2019 +0300
+
+    Added archiso files
+
+commit 01456bf5ac9bcdf627ea414b78d82414a0bdf3be
+Author: tqre <tkuure@gmail.com>
+Date:   Mon Apr 15 20:03:26 2019 +0300
+
+    Test commit
+
+commit 5e01e7f88529dba5747019af2e7b879126e25654
+Author: tqre <tkuure@gmail.com>
+Date:   Mon Apr 15 19:59:24 2019 +0300
+
+    Minor editing
+
+commit b378878205e6dfd50104ed96c46bd303a6c1a2ba
+Author: tqre <tkuure@gmail.com>
+Date:   Mon Apr 15 19:57:13 2019 +0300
+
+    Added helper scripts.
+
+commit bbf7fc3835291ab235abadc8db62da9ff25e8397
+Author: tqre <tkuure@gmail.com>
+Date:   Mon Apr 15 19:47:54 2019 +0300
+
+    Second commit, reporting early steps.
+
+commit 316355e38a471146b6af735eb713570eb31101b5
+Author: tqre <tkuure@gmail.com>
+Date:   Mon Apr 15 19:46:18 2019 +0300
+
+    First commit, nano is the commitmsg editor.
+
+commit 4021cfe9b6acb225b432c2547113a3e975f1aa99
+Author: tqre <36116069+tqre@users.noreply.github.com>
+Date:   Mon Apr 15 16:34:18 2019 +0000
+
+    Initial commit
