Git commands explanations added, log+diff

--- a/h3.md
+++ b/h3.md
@@ -23,8 +23,11 @@ Setting up the files and committing:
 
 ## c) Git commands
 
+First one on the list is 'git log'. The command shows all the commits
+made.
+
 ```
-	# git log
+# git log
 
 commit c83a1b76d824e1a247ed0527f449d37a8c433710 (HEAD -> master, origin/master, origin/HEAD)
 Author: tqre <tkuure@gmail.com>
@@ -67,4 +70,39 @@ Author: tqre <36116069+tqre@users.noreply.github.com>
 Date:   Mon Apr 15 16:34:18 2019 +0000
 
     Initial commit
+```
+
+Next command is 'git diff'. This command shows the changes that have
+been made on the local machine compared to the public repository.
+
+```
+# git diff
+diff --git a/h3.md b/h3.md
+index 38b7794..7b89d81 100644
+--- a/h3.md
++++ b/h3.md
+@@ -23,8 +23,11 @@ Setting up the files and committing:
+ 
+ ## c) Git commands
+ 
++First one on the list is 'git log'. The command shows all the commits
++made.
++
+ ```
+-       # git log
++# git log
+ 
+ commit c83a1b76d824e1a247ed0527f449d37a8c433710 (HEAD -> master, origin/master, origin/HEAD)
+ Author: tqre <tkuure@gmail.com>
+@@ -67,4 +70,7 @@ Author: tqre <36116069+tqre@users.noreply.github.com>
+ Date:   Mon Apr 15 16:34:18 2019 +0000
+ 
+     Initial commit
+-```
+\ No newline at end of file
++```
++
++Next command is 'git diff'. This command shows the changes that have
++been made on the local machine compared to the public repository.
+\ No newline at end of file
 ```
