Comment on markdown added

--- a/h3.md
+++ b/h3.md
@@ -106,3 +106,9 @@ index 38b7794..7b89d81 100644
 +been made on the local machine compared to the public repository.
 \ No newline at end of file
 ```
+
+### Comments to above mess: Markdown format doesn't work well here
+### with updates that include the block quote signs...
+
+Git blame can be used on individual files, here it shows all the modifications
+done to the README.md file here so far:
