--- a/h3.md
+++ b/h3.md
@@ -75,7 +75,7 @@ Date:   Mon Apr 15 16:34:18 2019 +0000
 Next command is 'git diff'. This command shows the changes that have
 been made on the local machine compared to the public repository.
 
-```
+````
 # git diff
 diff --git a/h3.md b/h3.md
 index 38b7794..7b89d81 100644
@@ -88,7 +88,7 @@ index 38b7794..7b89d81 100644
 +First one on the list is 'git log'. The command shows all the commits
 +made.
 +
- \```
+ ```
 -       # git log
 +# git log
  
@@ -98,17 +98,17 @@ index 38b7794..7b89d81 100644
  Date:   Mon Apr 15 16:34:18 2019 +0000
  
      Initial commit
--\```
+-```
 \ No newline at end of file
-+\```
++```
 +
 +Next command is 'git diff'. This command shows the changes that have
 +been made on the local machine compared to the public repository.
 \ No newline at end of file
-```
+````
 
-Comments to above mess: Markdown format doesn't work well here with updates that include
-the block quote signs. 
+Had to use 4 backticks in markdown language to show 3 bactick commits
+properly above.
 
 Git blame can be used on individual files, here it shows all the modifications
 done to the README.md file here so far:
