Typo fix bactick -> backtick

--- a/h3.md
+++ b/h3.md
@@ -107,7 +107,7 @@ index 38b7794..7b89d81 100644
 \ No newline at end of file
 ````
 
-Had to use 4 backticks in markdown language to show 3 bactick commits
+Had to use 4 backticks in markdown language to display 3 backtick commits
 properly above.
 
 Git blame can be used on individual files, here it shows all the modifications
