--- a/h3.md
+++ b/h3.md
@@ -120,3 +120,9 @@ done, who did it and when with the README.md file here so far:
 696a68b0 (tqre 2019-04-15 20:26:48 +0300 3) and configuring Saltstack into it to have a ready ad-hoc minions.
 ```
 
+## d) NO UNDO - use with care!
+
+Made a typo while correcting a typo. Hard reset time!
+```
+# git reset -hard
+```
