After reset test update

--- a/h3.md
+++ b/h3.md
@@ -124,5 +124,20 @@ done, who did it and when with the README.md file here so far:
 
 Made a typo while correcting a typo. Hard reset time!
 ```
-# git reset -hard
+diff --git a/README.md b/README.md
+index 3b37498..373420a 100644
+--- a/README.md
++++ b/README.md
+@@ -1,3 +1,3 @@
+ # Live Arch Linux, saltstack ready
+ Custom Live Arch Linux ISO on a usb stick
+-and configuring Saltstack into it toady ad-hoc minions.
++and configuring Saltstack into it to wahady ad-hoc minions.
+[tqre@tqrearch archlive]$ git reset -hard
+error: did you mean `--hard` (with two dashes ?)
+[tqre@tqrearch archlive]$ git reset --hard
+HEAD is now at 2d38b3f Typo correction
+[tqre@tqrearch archlive]$ git diff
+[tqre@tqrearch archlive]$ 
+
 ```
