--- a/h3.md
+++ b/h3.md
@@ -124,6 +124,7 @@ done, who did it and when with the README.md file here so far:
 
 Made a typo while correcting a typo. Hard reset time!
 ```
+# git diff
 diff --git a/README.md b/README.md
 index 3b37498..373420a 100644
 --- a/README.md
