--- a/h3.md
+++ b/h3.md
@@ -142,3 +142,10 @@ HEAD is now at 2d38b3f Typo correction
 [tqre@tqrearch archlive]$ 
 
 ```
+
+## e) Deviating...
+
+15.4.2019
+I'm going to test the live stick on classrooms machines tomorrow, if they boot
+nicely, I'm going to try to use the network there to make Arch master/minions
+work...
