--- a/h3.md
+++ b/h3.md
@@ -143,7 +143,7 @@ HEAD is now at 2d38b3f Typo correction
 
 ```
 
-## e) Deviating / work in progress
+## e) Deviating / work in progress, making commits to configure salt minion...
 
 15.4.2019
 I'm going to test the live stick on classrooms machines tomorrow, if they boot
