Homework assignment updated with a reference to salt-master configuration git page

--- a/h3.md
+++ b/h3.md
@@ -143,9 +143,9 @@ HEAD is now at 2d38b3f Typo correction
 
 ```
 
-## e) Deviating / work in progress, making commits to configure salt minion...
+## e) Design a new salt module (work in progress)
 
-15.4.2019
-I'm going to test the live stick on classrooms machines tomorrow, if they boot
-nicely, I'm going to try to use the network there to make Arch master/minions
-work...
+The current configuration of my master is in another git repo:
+
+https://github.com/tqre/master
+(better name pending...)
