Assignment e) on the works

--- a/h3.md
+++ b/h3.md
@@ -143,8 +143,36 @@ HEAD is now at 2d38b3f Typo correction
 
 ```
 
-## e) Design a new salt module (work in progress)
+## e) Make a new salt state - ufw
 
 The current configuration of my master is in another git repo:
 
 https://github.com/tqre/archlive-saltmaster
+
+### Setting up a firewall
+
+https://wiki.archlinux.org/index.php/Uncomplicated_Firewall
+
+The package is already installed on my live setups, but I'll make
+sure it stays so.
+
+First make an appropriate directory for the salt-master, and then I
+construct an init.sls file.
+
+```
+mkdir /srv/salt/ufw
+echo "ufw:\n  pkg.installed" > /srv/salt/ufw/init.sls
+cat /srv/salt/ufw/init.sls
+
+/srv/salt/ufw
+pkg.installed:
+  ufw
+```
+
+Testing it:
+```
+# salt '*' state.apply ufw
+
+
+
+
