Assignment update from test master environment

--- a/h3.md
+++ b/h3.md
@@ -169,10 +169,31 @@ pkg.installed:
   ufw
 ```
 
-Testing it:
+I don't have copypasting options on the testing master, so I cloned
+this repository to the master, and edit this file inside the testing
+master. This way I can write the output of the test command straight
+into this file, and update it on the repo.
+
 ```
-# salt '*' state.apply ufw
+# salt '*' state.apply ufw >> h3.md
 
+min-5:
+----------
+          ID: ufw
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 13:30:09.645424
+    Duration: 32.831 ms
+     Changes:   
 
+Summary for min-5
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  32.831 ms
+```
 
-
+This seems to work. I'll commit this change and configure the firewall.
