--- a/h3.md
+++ b/h3.md
@@ -197,3 +197,35 @@ Total run time:  32.831 ms
 ```
 
 This seems to work. I'll commit this change and configure the firewall.
+
+I'll configure the minion's firewall to only accept connections from
+the master. The master's ip is already in /tmp/minion/master_ip, so it
+can be read from there.
+
+There are many configuration files, and they all have to be managed.
+First I'll check how to manage an entire directory and its contents with
+salt. The following looks like the right documentation entry:
+
+https://docs.saltstack.com/en/latest/ref/states/all/salt.states.file.html#salt.states.file.recurse
+
+On master, I'll first copy the entire default configuration to /srv/salt/ufw/config
+and see if I can manage it with the recurse-statements in salt.
+
+`# cp -rT /etc/ufw/ /srv/salt/ufw/config`
+
+I'll add the following lines to the ufw/init.sls
+
+```
+/etc/ufw:
+  file.recurse:
+    - source: salt://ufw/config
+```
+
+Then I'll make a test file to the masters directory to see if it gets
+handled on the minion:
+```
+# touch /srv/salt/ufw/config/test
+# salt '*' state.apply ufw
+
+```
+
