--- a/h3.md
+++ b/h3.md
@@ -225,7 +225,42 @@ Then I'll make a test file to the masters directory to see if it gets
 handled on the minion:
 ```
 # touch /srv/salt/ufw/config/test
-# salt '*' state.apply ufw
+# salt '*' state.apply ufw >> h3.md
 
+min-5:
+----------
+          ID: ufw
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 14:19:26.473023
+    Duration: 33.211 ms
+     Changes:   
+----------
+          ID: /etc/ufw
+    Function: file.recurse
+      Result: True
+     Comment: Recursively updated /etc/ufw
+     Started: 14:19:26.508486
+    Duration: 217.058 ms
+     Changes:   
+              ----------
+              /etc/ufw/test:
+                  ----------
+                  diff:
+                      New file
+                  mode:
+                      0644
+
+Summary for min-5
+------------
+Succeeded: 2 (changed=1)
+Failed:    0
+------------
+Total states run:     2
+Total run time: 250.269 ms
 ```
+
+This worked! The reason I created the test file was that the settings files
+were in default state on both machines, so some difference had to be made.
 
