ufw config test documenting

--- a/h3.md
+++ b/h3.md
@@ -264,3 +264,19 @@ Total run time: 250.269 ms
 This worked! The reason I created the test file was that the settings files
 were in default state on both machines, so some difference had to be made.
 
+Package-file-service: I'll start the service, and I have to watch the whole
+directory now for changes. A rather old thread, but makes sense to me.
+
+https://stackoverflow.com/questions/23716009/saltstack-in-a-watch-statement-how-do-i-specify-a-directory-where-all-files-sh
+
+Adding the service part for the ufw/init.sls
+
+```
+firewall:
+  - service.running:
+    - name: ufw
+    - watch:
+      - file: /etc/ufw/*
+```
+
+
