--- a/h3.md
+++ b/h3.md
@@ -281,3 +281,11 @@ firewall:
 
 Testing 2 things at once, but I'll remove the test file to see what happens:
 
+```
+min-5:
+    Data failed to compile:
+----------
+    ID firewall in SLS ufw is not a dictionary
+```
+
+Didn't get it right...
