--- a/h3.md
+++ b/h3.md
@@ -270,7 +270,6 @@ directory now for changes. A rather old thread, but makes sense to me.
 https://stackoverflow.com/questions/23716009/saltstack-in-a-watch-statement-how-do-i-specify-a-directory-where-all-files-sh
 
 Adding the service part for the ufw/init.sls
-
 ```
 firewall:
   - service.running:
@@ -278,7 +277,6 @@ firewall:
     - watch:
       - file: /etc/ufw/*
 ```
-
 Testing 2 things at once, but I'll remove the test file to see what happens:
 
 ```
@@ -288,4 +286,59 @@ min-5:
     ID firewall in SLS ufw is not a dictionary
 ```
 
-Didn't get it right...
+Didn't get it right. That service.running does not need a dash before it.
+```
+firewall:
+  service.running:
+    - name: ufw
+    - watch:
+      - file: /etc/ufw/*
+```
+Second test, removing the test file from minion first:
+```
+# salt '*' state.apply ufw >> h3.md
+min-5:
+----------
+          ID: ufw
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 14:52:55.951887
+    Duration: 33.095 ms
+     Changes:   
+----------
+          ID: /etc/ufw
+    Function: file.recurse
+      Result: True
+     Comment: Recursively updated /etc/ufw
+     Started: 14:52:55.987227
+    Duration: 225.008 ms
+     Changes:   
+              ----------
+              /etc/ufw/test:
+                  ----------
+                  diff:
+                      New file
+                  mode:
+                      0644
+----------
+          ID: firewall
+    Function: service.running
+        Name: ufw
+      Result: False
+     Comment: The following requisites were not found:
+                                 watch:
+                                     file: /etc/ufw/*
+     Started: 14:52:56.914704
+    Duration: 0.014 ms
+     Changes:   
+
+Summary for min-5
+------------
+Succeeded: 2 (changed=1)
+Failed:    1
+------------
+Total states run:     3
+Total run time: 258.117 ms
+```
+That old stackoverflow thread... I'll check salt documentation
