--- a/h3.md
+++ b/h3.md
@@ -341,4 +341,21 @@ Failed:    1
 Total states run:     3
 Total run time: 258.117 ms
 ```
-That old stackoverflow thread... I'll check salt documentation
+That old stackoverflow thread... I'll check the Internet:
+
+https://groups.google.com/forum/#!topic/salt-users/kGQ5o4umNmc
+https://docs.saltstack.com/en/latest/topics/best_practices.html
+
+This is interesting, maybe the next one could work:
+
+```
+ufw:
+  pkg.unstalled
+  service.running
+
+/etc/ufw:
+  file.recurse:
+    - source: salt://ufw/config
+    - watch_in:
+      - service: ufw
+```
