--- a/h3.md
+++ b/h3.md
@@ -350,8 +350,10 @@ This is interesting, maybe the next one could work:
 
 ```
 ufw:
-  pkg.unstalled
-  service.running
+  pkg:
+    - installed
+  service.running:
+    - enable: True
 
 /etc/ufw:
   file.recurse:
