--- a/h3.md
+++ b/h3.md
@@ -165,8 +165,8 @@ echo "ufw:\n  pkg.installed" > /srv/salt/ufw/init.sls
 cat /srv/salt/ufw/init.sls
 
 /srv/salt/ufw
-pkg.installed:
-  ufw
+ufw:
+  pkg.installed
 ```
 
 I don't have copypasting options on the testing master, so I cloned
@@ -361,3 +361,7 @@ ufw:
     - watch_in:
       - service: ufw
 ```
+min-5:
+    Data failed to compile:
+----------
+    Rendering SLS 'base:ufw' failed: could not find expected ':'
