--- a/h3.md
+++ b/h3.md
@@ -266,7 +266,8 @@ This was a useful source while digging the right syntax.
 
 https://docs.saltstack.com/en/latest/topics/best_practices.html
 
-Now the file looks like this, service is enabled, but how to watch multiple files?
+Now the file looks like this, service is enabled, and watching multiple
+files is accomplished:
 
 ```
 ufw:
@@ -275,7 +276,9 @@ ufw:
 /etc/ufw:
   file.recurse:
     - source: salt://ufw/config
-
+    - watch_in:
+      - service: ufw
+    
 firewall:
   service.running:
     - name: ufw
