--- a/h3.md
+++ b/h3.md
@@ -284,3 +284,61 @@ firewall:
     - name: ufw
 ```
 
+I'll change one of the files and run the state again:
+```
+# salt '*' state.apply ufw
+
+min-5:
+----------
+          ID: ufw
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 15:33:03.719996
+    Duration: 33.666 ms
+     Changes:   
+----------
+          ID: /etc/ufw
+    Function: file.recurse
+      Result: True
+     Comment: Recursively updated /etc/ufw
+     Started: 15:33:03.755811
+    Duration: 211.564 ms
+     Changes:   
+              ----------
+              /etc/ufw/ufw.conf:
+                  ----------
+                  diff:
+                      --- 
+                      +++ 
+                      @@ -1,10 +1,2 @@
+                      -# /etc/ufw/ufw.conf
+                      -#
+                      -
+                      -# Set to yes to start on boot. If setting this remotely, be sure to add a rule
+                      -# to allow your remote connection before starting ufw. Eg: 'ufw allow 22/tcp'
+                      -ENABLED=no
+                      -
+                      -# Please use the 'ufw' command to set the loglevel. Eg: 'ufw logging medium'.
+                      -# See 'man ufw' for details.
+                      +ENABLED=yes
+                       LOGLEVEL=low
+----------
+          ID: firewall
+    Function: service.running
+        Name: ufw
+      Result: True
+     Comment: The service ufw is already running
+     Started: 15:33:04.666081
+    Duration: 37.81 ms
+     Changes:   
+
+Summary for min-5
+------------
+Succeeded: 3 (changed=1)
+Failed:    0
+------------
+Total states run:     3
+Total run time: 283.040 ms
+```
+I'll configure the firewall bit later... at least the service is up.
