--- a/h3.md
+++ b/h3.md
@@ -341,4 +341,8 @@ Failed:    0
 Total states run:     3
 Total run time: 283.040 ms
 ```
-I'll configure the firewall bit later... at least the service is up.
+The firewall is however not enabled on startup, as the configuration is done post-startup.
+I'll add the command to start it to init.sls
+See the current configuration files:
+
+https://github.com/tqre/archlive-saltmaster/tree/master/salt/ufw
