--- a/h3.md
+++ b/h3.md
@@ -342,7 +342,6 @@ Total states run:     3
 Total run time: 283.040 ms
 ```
 The firewall is however not enabled on startup, as the configuration is done post-startup.
-I'll add the command to start it to init.sls
-See the current configuration files:
+I'll issue the command to start it to init.sls, see the current configuration files:
 
 https://github.com/tqre/archlive-saltmaster/tree/master/salt/ufw
