--- a/h3.md
+++ b/h3.md
@@ -342,6 +342,7 @@ Total states run:     3
 Total run time: 283.040 ms
 ```
 The firewall is however not enabled on startup, as the configuration is done post-startup.
-I'll issue the command to start it to init.sls, see the current configuration files:
+I'll issue the command to start it to init.sls, and add holes for ssh and salt connections.
+The current configuration files:
 
 https://github.com/tqre/archlive-saltmaster/tree/master/salt/ufw
